--- a/A_dbms/templates/dbms/custom/scan/custom-summry.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-summry.html
@@ -11,7 +11,7 @@
             {% endif %}
             {% if PAGE_TITLE == '保后管理' %}
                 <a class="btn btn-primary btn-sm " id="reviewPlanB">保后计划</a><!--#path('custom/del/'-->
-                <a class="btn btn-primary btn-sm " id="reviewB">保后</a><!--#path('custom/del/'-->
+                <a class="btn btn-primary btn-sm " id="autoReviewB">自主保后</a><!--#path('custom/del/'-->
             {% endif %}
         </label>
     </div>
