--- a/A_dbms/templates/dbms/review/review-scan.html
+++ b/A_dbms/templates/dbms/review/review-scan.html
@@ -7,10 +7,12 @@
         {% include 'dbms/custom/scan/custom-summry.html' %}
         {% include 'dbms/custom/scan/custom-tab.html' %}
         {% include 'dbms/review/modl/review-plan-mod.html' %}
+        {% include 'dbms/review/modl/review-add-mod.html' %}
     </div>
 {% endblock %}
 
 {% block extra-js %}
     {% include 'dbms/review/extra/js-review-plan-add.html' %}
+    {% include 'dbms/review/extra/js-review-add.html' %}
 
 {% endblock %}
