--- a/A_dbms/templates/dbms/custom/scan/custom-tab.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-tab.html
@@ -31,6 +31,7 @@
         {% endif %}
         <div role="tabpanel" class="tab-pane active" id="project_status"> <!--项目情况-->
             {% include 'dbms/custom/scan/tab/project_status.html' %}</div>
-
+        <div role="tabpanel" class="tab-pane" id="review_check"> <!--保后-->
+            {% include 'dbms/review/scan/tab/review-check.html' %}</div>
     </div>
 </div>
