--- a/A_dbms/templates/dbms/custom/scan/tab/project_status.html
+++ b/A_dbms/templates/dbms/custom/scan/tab/project_status.html
@@ -1,11 +1,5 @@
 <div class="table-responsive">
-    {#"table-responsive":表格响应式布局#}
-    <table class="table table-bordered table-hover
-                table-condensed active">
-        {#"table-bordered":表格表格边框#}
-        {#"table-hover":表格悬停变色#}
-        {#"table-condensed":表格紧缩#}
-        {#<caption><h4>项目管理</h4></caption>#}
+    <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
             <th>项目编号</th>
@@ -19,16 +13,18 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>{{ custom_obj.article_custom.all.0.article_num }}</td>
-            <td>{{ custom_obj.article_custom.all.0.amount }}</td>
-            <td>{{ custom_obj.article_custom.all.0.credit_term }}</td>
-            <td>{{ custom_obj.article_custom.all.0.director.name }}</td>
-            <td>{{ custom_obj.article_custom.all.0.assistant.name}}</td>
-            <td>{{ custom_obj.article_custom.all.0.control.name }}</td>
-            <td>{{ custom_obj.article_custom.all.0.article_date }}</td>
-            <td>{{ custom_obj.article_custom.all.0.get_article_state_display }}</td>
-        </tr>
+        {% for article in article_custom_list %}
+            <tr>
+                <td>{{ article.article_num }}</td>
+                <td>{{ article.amount }}</td>
+                <td>{{ article.credit_term }}</td>
+                <td>{{ article.director.name }}</td>
+                <td>{{ article.assistant.name }}</td>
+                <td>{{ article.control.name }}</td>
+                <td>{{ article.article_date }}</td>
+                <td>{{ article.get_article_state_display }}</td>
+            </tr>
+        {% endfor %}
         </tbody>
     </table>
 </div>
