--- a/A_dbms/templates/dbms/article/article/article-table.html
+++ b/A_dbms/templates/dbms/article/article/article-table.html
@@ -1,11 +1,5 @@
 <div class="table-responsive">
-    {#"table-responsive":表格响应式布局#}
-    <table class="table table-bordered table-hover
-                table-condensed active">
-        {#"table-bordered":表格表格边框#}
-        {#"table-hover":表格悬停变色#}
-        {#"table-condensed":表格紧缩#}
-        {#<caption><h4>项目管理</h4></caption>#}
+    <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
             <th>项目编号</th>
@@ -15,6 +9,7 @@
             <th>项目经理</th>
             <th>项目助理</th>
             <th>风控专员</th>
+            <th>创建日期</th>
             <th>风险分类</th>
             <th>项目状态</th>
         </tr>
@@ -33,6 +28,7 @@
                 <td>{{ article.director.name }}</td>
                 <td>{{ article.assistant.name }}</td>
                 <td>{{ article.control.name }}</td>
+                <td>{{ article.build_date }}</td>
                 <td>{{ article.get_classification_display }}</td>
                 {#方式一：推荐#}
                 <td>{{ article.get_article_state_display }}</td>
