--- a/A_dbms/templates/dbms/custom/scan/custom-tab.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-tab.html
@@ -12,10 +12,10 @@
                 <a href="#shareholder" style="background-color: #f5f5f5"
                    aria-controls="profile" role="tab" data-toggle="tab">股东信息</a></li>
         {% endif %}
-        <li role="presentation" class="active">
+        <li role="presentation">
             <a href="#project_status" style="background-color: #f5f5f5"
                aria-controls="settings" role="tab" data-toggle="tab">项目情况</a></li>
-        <li role="presentation">
+        <li role="presentation" class="active">
             <a href="#review_check" style="background-color: #f5f5f5"
                aria-controls="settings" role="tab" data-toggle="tab">保后</a></li>
     </ul>
@@ -29,9 +29,9 @@
             <div role="tabpanel" class="tab-pane" id="shareholder"> <!--股东信息-->
                 {% include 'dbms/custom/scan/tab/shareholder.html' %}</div>
         {% endif %}
-        <div role="tabpanel" class="tab-pane active" id="project_status"> <!--项目情况-->
+        <div role="tabpanel" class="tab-pane" id="project_status"> <!--项目情况-->
             {% include 'dbms/custom/scan/tab/project_status.html' %}</div>
-        <div role="tabpanel" class="tab-pane" id="review_check"> <!--保后-->
+        <div role="tabpanel" class="tab-pane active" id="review_check"> <!--保后-->
             {% include 'dbms/review/scan/tab/review-check.html' %}</div>
     </div>
 </div>
