--- a/A_dbms/templates/dbms/custom/scan/tab/project_status.html
+++ b/A_dbms/templates/dbms/custom/scan/tab/project_status.html
@@ -9,19 +9,25 @@
             <th>项目助理</th>
             <th>风控专员</th>
             <th>提交日期</th>
+            <th>放款金额</th>
+            <th>还款金额</th>
             <th>项目状态</th>
         </tr>
         </thead>
         <tbody>
         {% for article in article_custom_list %}
             <tr>
-                <td>{{ article.article_num }}</td>
+                <td><a target="_blank" href="{% url 'dbms:article_scan_all' article_id=article.id %}">
+                    {{ article.article_num }}</a>
+                </td>
                 <td>{{ article.amount }}</td>
                 <td>{{ article.credit_term }}</td>
                 <td>{{ article.director.name }}</td>
                 <td>{{ article.assistant.name }}</td>
                 <td>{{ article.control.name }}</td>
                 <td>{{ article.article_date }}</td>
+                <td>{{ article.article_provide_sum }}</td>
+                <td>{{ article.article_repayment_sum }}</td>
                 <td>{{ article.get_article_state_display }}</td>
             </tr>
         {% endfor %}
