--- a/A_dbms/templates/dbms/agree/agree/agree-table.html
+++ b/A_dbms/templates/dbms/agree/agree/agree-table.html
@@ -2,7 +2,7 @@
     <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
-            <th>合同编号</th>
+            <th>合同编号({{ agree_amount }})</th>
             <th>客户名称</th>
             <th>放款银行</th>
             <th>合同金额</th>
