--- a/A_dbms/templates/dbms/meeting/meeting/meeting-table.html
+++ b/A_dbms/templates/dbms/meeting/meeting/meeting-table.html
@@ -1,8 +1,8 @@
 <div class="table-responsive">
-    <table class="table table-bordered table-hovertable-condensed active">
+    <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
-            <th>编号</th>
+            <th>编号({{ meeting_acount }})</th>
             <th>评审类型</th>
             <th>评审次序</th>
             <th>项目数量</th>
