--- a/A_dbms/templates/dbms/warrant/warrant/warrant-table.html
+++ b/A_dbms/templates/dbms/warrant/warrant/warrant-table.html
@@ -2,7 +2,7 @@
     <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
-            <th>权证编号</th>
+            <th>权证编号({{ warrant_acount }})</th>
             <th>类型</th>
             <th>描述</th>
             <th>状态</th>
