--- a/A_dbms/templates/dbms/appraisal/appraisal/appraisal-table.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal/appraisal-table.html
@@ -2,7 +2,7 @@
     <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
-            <th>项目编号</th>
+            <th>项目编号({{ appraisal_amount }})</th>
             <th>客户</th>
             <th>金额</th>
             <th>期限</th>
