--- a/A_dbms/templates/dbms/provide/agree/provide-agree-table.html
+++ b/A_dbms/templates/dbms/provide/agree/provide-agree-table.html
@@ -2,11 +2,12 @@
     <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
-            <th>合同编号</th>
+            <th>合同编号({{ agree_amount }})</th>
             <th>客户名称</th>
             <th>放款银行</th>
             <th>合同金额</th>
             <th>合同种类</th>
+            <th>通知金额</th>
             <th>放款金额</th>
             <th>纪要编号</th>
             <th>合同状态</th>
@@ -20,6 +21,7 @@
                 <td>{{ agree.branch.short_name }}</td>
                 <td>{{ agree.agree_amount }}</td>
                 <td>{{ agree.get_agree_typ_display }}</td>
+                <td>{{ agree.agree_notify_sum }}</td>
                 <td>{{ agree.agree_provide_sum }}</td>
                 <td>{{ agree.lending.summary.summary_num }}</td>
                 <td>{{ agree.get_agree_state_display }}</td>
