--- a/A_dbms/templates/dbms/review/review/review-table.html
+++ b/A_dbms/templates/dbms/review/review/review-table.html
@@ -2,7 +2,7 @@
     <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
-            <th>客户名称</th>
+            <th>客户名称({{ custom_acount }})</th>
             <th>授信总额</th>
             <th>流贷余额</th>
             <th>承兑余额</th>
