--- a/A_dbms/templates/dbms/warrant/scan/warrant_tab/storages.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant_tab/storages.html
@@ -11,7 +11,7 @@
         </tr>
         </thead>
         <tbody>
-        {% for storage in storages_p_list %}
+        {% for storage in storage_warrant_list %}
             <tr storage-nid="{{ storage.id }}">
                 <td>{{ storage.get_storage_typ_display }}</td>
                 <td>{{ storage.storage_date }}</td>
