--- a/A_dbms/templates/dbms/agree/agree/agree-table.html
+++ b/A_dbms/templates/dbms/agree/agree/agree-table.html
@@ -2,11 +2,15 @@
     <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
-            <th>合同编号({{ agree_amount }})</th> {#({{ agree_amount }})#}
+            <th>合同编号({{ agree_amount }})</th>
+            {#({{ agree_amount }})#}
             <th>客户名称</th>
             <th>放款银行</th>
-            <th>合同金额</th>
             <th>合同种类</th>
+            <th>合同金额</th>
+            <th>通知金额</th>
+            <th>放款金额</th>
+            <th>还款金额</th>
             <th>纪要编号</th>
             <th>合同状态</th>
         </tr>
@@ -14,11 +18,18 @@
         <tbody>
         {% for agree in p_list %}
             <tr>
-                <td><a href="{% url 'dbms:agree_scan' agree_id=agree.id %}">{{ agree.agree_num }}</a></td>
+                {% if PAGE_TITLE == '合同管理' %}
+                    <td><a href="{% url 'dbms:agree_scan' agree_id=agree.id %}">{{ agree.agree_num }}</a></td>
+                {% elif PAGE_TITLE == '风控落实' %}
+                    <td><a href="{% url 'dbms:provide_agree_scan' agree_id=agree.id %}">{{ agree.agree_num }}</a></td>
+                {% endif %}
                 <td>{{ agree.lending.summary.custom.short_name }}</td>
                 <td>{{ agree.branch.short_name }}</td>
-                <td>{{ agree.agree_amount }}</td>
                 <td>{{ agree.get_agree_typ_display }}</td>
+                <td>{{ agree.agree_amount }}</td>
+                <td>{{ agree.agree_notify_sum }}</td>
+                <td>{{ agree.agree_provide_sum }}</td>
+                <td>{{ agree.agree_repayment_sum }}</td>
                 <td>{{ agree.lending }}</td>
                 <td>{{ agree.get_agree_state_display }}</td>
             </tr>
