--- a/A_dbms/templates/dbms/article/article/article-table.html
+++ b/A_dbms/templates/dbms/article/article/article-table.html
@@ -4,12 +4,13 @@
         <tr style="text-align: center">
             <th>项目编号({{ article_acount }})</th>
             <th>客户</th>
-            <th>金额</th>
+            <th>项目金额</th>
             <th>期限</th>
             <th>项目经理</th>
             <th>项目助理</th>
             <th>风控专员</th>
             <th>创建日期</th>
+            <th>放款金额</th>
             <th>风险分类</th>
             <th>项目状态</th>
         </tr>
@@ -22,13 +23,14 @@
                         {{ article.article_num }}
                     </a>
                 </td>
-                <td>{{ article.custom }}</td>
+                <td>{{ article.custom.short_name }}</td>
                 <td>{{ article.amount }}</td>
                 <td>{{ article.credit_term }}</td>
                 <td>{{ article.director.name }}</td>
                 <td>{{ article.assistant.name }}</td>
                 <td>{{ article.control.name }}</td>
                 <td>{{ article.build_date }}</td>
+                <td>{{ article.article_provide_sum }}</td>
                 <td>{{ article.get_classification_display }}</td>
                 {#方式一：推荐#}
                 <td>{{ article.get_article_state_display }}</td>
