--- a/A_dbms/templates/dbms/article/lending/tab/lending-agree.html
+++ b/A_dbms/templates/dbms/article/lending/tab/lending-agree.html
@@ -1,18 +1,14 @@
 <div class="table-responsive">
-    {#"table-responsive":表格响应式布局#}
-    <table class="table table-bordered table-hover
-                table-condensed active">
-        {#"table-bordered":表格表格边框#}
-        {#"table-hover":表格悬停变色#}
-        {#"table-condensed":表格紧缩#}
-        {#<caption><h4>项目管理</h4></caption>#}
+    <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
             <th>合同编号</th>
             <th>放款银行</th>
             <th>合同类型</th>
             <th>合同金额</th>
+            <th>通知金额</th>
             <th>放款金额</th>
+            <th>还款金额</th>
             <th>合同状态</th>
             {% if lending_operate %}
                 <th>操作</th>
@@ -29,7 +25,9 @@
                 <td>{{ agree.branch }}</td>
                 <td>{{ agree.get_agree_typ_display }}</td>
                 <td>{{ agree.agree_amount }}</td>
-                <td>{{ agree.agree_balance }}</td>
+                <td>{{ agree.agree_notify_sum }}</td>
+                <td>{{ agree.agree_provide_sum }}</td>
+                <td>{{ agree.agree_repayment_sum }}</td>
                 <td>{{ agree.get_agree_state_display }}</td>
                 {% if lending_operate %}
                     <td><a class="btn btn-danger btn-xs delGuaranteeB">删除</a></td>
