--- a/A_dbms/templates/dbms/agree/modl/mod_form/agree-add-edit.html
+++ b/A_dbms/templates/dbms/agree/modl/mod_form/agree-add-edit.html
@@ -19,6 +19,11 @@
         <div class="col-sm-9">{{ form_agree_add.agree_amount }}</div>
         <label id="e_agree_amount" class="pull-right">{{ form_agree_add.agree_amount.errors }}</label>
     </div>
+    <div class="form-group"><!--期限-->
+        <label for="id_agree_term" class="col-sm-3 control-label">{{ form_agree_add.agree_term.label }}：</label>
+        <div class="col-sm-9">{{ form_agree_add.agree_term }}</div>
+        <label id="e_agree_term" class="pull-right">{{ form_agree_add.agree_term.errors }}</label>
+    </div>
     <div class="form-group"><!--类型数量-->
         <label for="id_guarantee_typ" class="col-sm-3 control-label">{{ form_agree_add.guarantee_typ.label }}：</label>
         <div class="col-sm-9">{{ form_agree_add.guarantee_typ }}</div>
