--- a/A_dbms/templates/dbms/dun/compensatory/compensatory-filter.html
+++ b/A_dbms/templates/dbms/dun/compensatory/compensatory-filter.html
@@ -16,9 +16,9 @@
             {% endif %}
         {% endfor %}
     </label>
-    <label>
+        <label>
         <form class="navbar-form" style="display: inline">
-            <input type="text" class="form-control" placeholder="搜索客户">
+            <input type="search" name="_s" class="form-control" placeholder="合同编号,客户,银行,纪要">
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
