--- a/A_dbms/templates/dbms/provide/provide-scan.html
+++ b/A_dbms/templates/dbms/provide/provide-scan.html
@@ -9,10 +9,12 @@
         {% include 'dbms/provide/provide_scan/provide-tab.html' %}
         {% include 'dbms/provide/modl/repayment-add-mod.html' %}
         {% include 'dbms/provide/modl/repayment-del-mod.html' %}
+        {% include 'dbms/dun/modl/compensatory-add-mod.html' %}
     </div>
 {% endblock %}
 
 {% block extra-js %}
     {% include 'dbms/provide/extra/js-repayment-add.html' %}
     {% include 'dbms/provide/extra/js-repayment-del.html' %}
+    {% include 'dbms/dun/extra/js-compensatory-add.html' %}
 {% endblock %}
