--- a/A_dbms/templates/dbms/dun/modl/mod_form/compensatory-add-edit.html
+++ b/A_dbms/templates/dbms/dun/modl/mod_form/compensatory-add-edit.html
@@ -19,6 +19,13 @@
         <label id="e_compensatory_interest"
                class="pull-right">{{ form_compensatory_add.compensatory_interest.errors }}</label>
     </div>
+    <div class="form-group"><!--代偿罚息金额-->
+        <label for="id_default_interest"
+               class="col-sm-3 control-label">{{ form_compensatory_add.default_interest.label }}：</label>
+        <div class="col-sm-9">{{ form_compensatory_add.default_interest }}</div>
+        <label id="e_default_interest"
+               class="pull-right">{{ form_compensatory_add.default_interest.errors }}</label>
+    </div>
 </div>
 
 
