--- a/A_dbms/templates/dbms/agree/agree/agree-table.html
+++ b/A_dbms/templates/dbms/agree/agree/agree-table.html
@@ -8,7 +8,7 @@
             <th>放款银行</th>
             <th>合同种类</th>
             <th>合同金额</th>
-            <th>通知金额</th>
+            <th>加权通知金额</th>
             <th>放款金额</th>
             <th>还款金额</th>
             <th>纪要编号</th>
@@ -18,7 +18,7 @@
         <tbody>
         {% for agree in p_list %}
             <tr>
-                {% if PAGE_TITLE == '合同管理' %}
+                {% if PAGE_TITLE == '合同列表' %}
                     <td><a href="{% url 'dbms:agree_scan' agree_id=agree.id %}">{{ agree.agree_num }}</a></td>
                 {% elif PAGE_TITLE == '风控落实' %}
                     <td><a href="{% url 'dbms:provide_agree_scan' agree_id=agree.id %}">{{ agree.agree_num }}</a></td>
