--- a/A_dbms/templates/dbms/agree/extra/js-agree-add.html
+++ b/A_dbms/templates/dbms/agree/extra/js-agree-add.html
@@ -39,6 +39,7 @@
                     } else {
                         alert(arg.message);
                         $('#e_agree_amount').text(arg.forme.agree_amount);
+                        $('#e_amount_limit').text(arg.forme.amount_limit);
                     }
                 }
             })
