--- a/A_dbms/templates/dbms/agree/scan/agree-summry-body.html
+++ b/A_dbms/templates/dbms/agree/scan/agree-summry-body.html
@@ -9,7 +9,11 @@
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     合同金额：{{ agree_obj.agree_amount }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    通知金额：{{ agree_obj.agree_notify_sum }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     放款金额：{{ agree_obj.agree_provide_sum }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    还款金额：{{ agree_obj.agree_repayment_sum }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     签批日期：{{ agree_obj.agree_sign_date }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
