--- a/A_dbms/templates/dbms/article/article/article-table.html
+++ b/A_dbms/templates/dbms/article/article/article-table.html
@@ -10,7 +10,7 @@
             <th>项目助理</th>
             <th>风控专员</th>
             <th>创建日期</th>
-            <th>通知金额</th>
+            <th>加权通知金额</th>
             <th>放款金额</th>
             <th>还款金额</th>
 {#            <th>风险分类</th>#}
