--- a/A_dbms/templates/dbms/article/article/article-table.html
+++ b/A_dbms/templates/dbms/article/article/article-table.html
@@ -26,15 +26,15 @@
                     </a>
                 </td>
                 <td>{{ article.custom.short_name }}</td>
-                <td>{{ article.amount }}</td>
-                <td>{{ article.credit_term }}</td>
+                <td align="right">{{ article.amount }}</td>
+                <td align="right">{{ article.credit_term }}</td>
                 <td>{{ article.director.name }}</td>
                 <td>{{ article.assistant.name }}</td>
                 <td>{{ article.control.name }}</td>
                 <td>{{ article.build_date }}</td>
-                <td>{{ article.article_notify_sum }}</td>
-                <td>{{ article.article_provide_sum }}</td>
-                <td>{{ article.article_repayment_sum }}</td>
+                <td align="right">{{ article.article_notify_sum }}</td>
+                <td align="right">{{ article.article_provide_sum }}</td>
+                <td align="right">{{ article.article_repayment_sum }}</td>
 {#                <td>{{ article.get_classification_display }}</td>#}
                 {#方式一：推荐#}
                 <td>{{ article.get_article_state_display }}</td>
