--- a/A_dbms/templates/dbms/custom/custom/custom-table.html
+++ b/A_dbms/templates/dbms/custom/custom/custom-table.html
@@ -31,10 +31,10 @@
                 <td>{{ custom.contact_addr }}</td>
                 <td>{{ custom.linkman }}</td>
                 <td>{{ custom.contact_num }}</td>
-                <td>{{ custom.credit_amount }}</td>
-                <td>{{ custom.custom_flow }}</td>
-                <td>{{ custom.custom_accept }}</td>
-                <td>{{ custom.custom_back }}</td>
+                <td align="right">{{ custom.credit_amount }}</td>
+                <td align="right">{{ custom.custom_flow }}</td>
+                <td align="right">{{ custom.custom_accept }}</td>
+                <td align="right">{{ custom.custom_back }}</td>
             </tr>
         {% endfor %}
         </tbody>
