--- a/A_dbms/templates/dbms/meeting/meeting/meeting-table.html
+++ b/A_dbms/templates/dbms/meeting/meeting/meeting-table.html
@@ -19,8 +19,8 @@
                     </a>
                 </td>
                 <td>{{ meeting.get_review_model_display }}</td>
-                <td>{{ meeting.review_order }}</td>
-                <td>{{ meeting.article.all.count }}</td>
+                <td align="right">{{ meeting.review_order }}</td>
+                <td align="right">{{ meeting.article.all.count }}</td>
                 <td>{{ meeting.review_date }}</td>
                 <td>{{ meeting.get_meeting_state_display }}</td>
             </tr>
