--- a/A_dbms/templates/dbms/appraisal/appraisal/appraisal-table.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal/appraisal-table.html
@@ -23,7 +23,7 @@
                     </a>
                 </td>
                 <td>{{ article.custom.short_name }}</td>
-                <td>{{ article.amount }}</td>
+                <td align="right">{{ article.amount }}</td>
                 <td>{{ article.credit_term }}</td>
                 <td>{{ article.director.name }}</td>
                 <td>{{ article.assistant.name }}</td>
